kubernetes/archive/storage/05-nextcloud.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: storage
spec:
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
