kubernetes/archive/storage/11-paperless.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: storage
spec:
  selector:
    app: paperless
  ports:
    - port: 8000
      targetPort: 8000
