kubernetes/archive/storage/12-paperless.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: storage
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
    - host: paper.example.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-service
                port:
                  number: 8000
